# pixiv_pc

./: .gitignore  GEMINI.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
src/: main.py
src/config/: config.py
src/crawler/: __init__.py  downloader.py  pixiv_api.py
src/utils/: logger.py
